# BioRT-HBV-Surface

./: .gitignore  CMakeLists.txt  build_biort.sh  check_build.py  run_info.txt
BaselineResults/: KonzaSurface_results.txt  KonzaSurface_results_numexp.txt
bug_fixing/: terminal_output_biortexe_Surface_2024-03-13_ASK.txt
dep/cvode/: CMakeLists.txt
dep/cvode/config/: SundialsFortran.cmake  SundialsHypre.cmake  SundialsMPI.cmake  SundialsPETSc.cmake  SundialsPOSIXTimers.cmake
dep/cvode/examples/templates/: cmakelists_trilinos_CXX_ex.in
include/: biort.h  biort.hpp  custom_io.h  input_files.hpp  optparse.hpp
input/Konza/: chem.txt  cini.txt  soil.txt
src/: CMakeLists.txt  custom_io.cpp  init.c  init.cpp  lookup.c  lookup.cpp  main.c  main.cpp  optparse.cpp  print.c  print.cpp  react.c  react.cpp  read_chem.c  read_chem.cpp  read_cini.c  read_cini.cpp  read_hbv.c  read_hbv.cpp  read_param.c  read_param.cpp  read_precipchem.c  read_precipchem.cpp  read_soil.c  read_soil.cpp  set_numexp.c  set_numexp.cpp  speciation.c  speciation.cpp  time_func.cpp  transport.cpp  transpt.c  util_func.c  util_func.cpp
src/data_structures/: CMakeLists.txt  CalibrationStruct.cpp  ChemTableEntry.cpp  ChemicalState.cpp  ControlData.cpp  HBVParameters.cpp  ReactionNetwork.cpp  SoilConstants.cpp  SoilParameters.cpp
test/: test_react.c
